--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,11 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-RewriteBase /Projet-10-Med.It/
+RewriteBase /Projet-10-medit/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /Projet-10-Med.It/index.php [L]
+RewriteRule . /Projet-10-medit/index.php [L]
 </IfModule>
 
 # END WordPress
